[package]
name = "wmata"
version = "3.0.0"
authors = ["Emma Foster <emma@emma.sh>"]
edition = "2018"
repository = "https://github.com/emma-foster/wmata"
description = "wmata is a high level Rust interface to the Washington Metropolitan Area Transit Authority (WMATA) API"
keywords = ["wmata", "washington", "dc", "networking", "api"]
categories = ["api-bindings", "encoding", "network-programming"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_json = "1.0.41"
reqwest = "0.9.21"
