[package]
name = "wmata"
version = "6.0.0"
authors = ["Emma K Alexandra <emma@emma.sh>"]
edition = "2018"
repository = "https://github.com/emma-k-alexandra/wmata"
description = "wmata is a high level Rust interface to the Washington Metropolitan Area Transit Authority (WMATA) API"
keywords = ["wmata", "washington", "dc", "networking", "api"]
categories = ["api-bindings", "encoding", "network-programming"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.44"
reqwest = "0.9.24"
chrono = "0.4.10"
